--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,6 +7,7 @@
       <div class="col-auto d-flex align-items-center">
         <form class="d-flex align-items-center w-100">
           <a href="/tabela/estoqueatual" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Estoque Atual</a>
+          <a href="/qtde-unica" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Em estoque</a>
           <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Entrada</a>
           <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Saída</a>
           <a href="/estoque/itenspagos" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Ítens Saídos</a>
