feat: criação do modal para vizualiação dos itens no botão vizualizar da tabela de itens em estoque

--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -201,7 +201,7 @@
             <a href="/estoque/itenspagos" class="system-box link">
                 <div>
                     <i class="fas fa-boxes text-success fa-2x"></i>
-                    <h4 class="text-success">Tabela dos Itens que Sairam do estoque</h4>
+                    <h4 class="text-success">Itens que Sairam do estoque</h4>
                     <p class="text-success">Itens Pagos</p>
                 </div>
             </a>
@@ -242,7 +242,6 @@
                 Horário de funcionamento: <br>De segunda a sexta de 8h às 12h e de 13h às 16:30hs</p>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 
 </html>
