--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -2,13 +2,14 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela Com Estoque Atual</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <style>
+        /* Adicionando estilos do modal */
         .table-container {
             max-height: 65vh;
             overflow-y: auto;
@@ -31,6 +32,22 @@
             background-color: #fff;
             z-index: 1;
         }
+
+        .btn-action{
+            width:70px;
+        }
+
+        .modal.fade .modal-dialog {
+            transition: transform 0.25s ease-in-out, opacity 0.25s ease-in-out;
+            transform: translateY(-10%);
+            opacity: 0;
+        }
+
+        .modal.show .modal-dialog {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
     </style>
 </head>
 
@@ -38,60 +55,160 @@
     <%- include('../partials/header') %>
 
     <div class="caixa container-fluid p-4">
-      <!-- breadcrumb -->
-      <div class="pb-3 mt-3">
-        <%- include('../partials/breadcrumb', { pageTitle: 'Estoque Atual' }) %>
-      </div>
-
-      <div class=" border bg-light p-4 shadow-sm rounded">
-        <div class="row align-items-center mb-3">
-          <h2 class="text-center text-success mb-3 mt-3 fw-bold">Estoque Atual</h2>
+        <!-- breadcrumb -->
+        <div class="pb-3 mt-3">
+            <%- include('../partials/breadcrumb', { pageTitle: 'Estoque Atual' }) %>
         </div>
-        <div class="table-container">
-            <table class="table table-striped table-hover mb-0">
-                <thead>
-                    <tr>
-                        <th class="text-center">ID</th>
-                        <th class="text-center">Entrada</th>
-                        <th>Descrição</th>
-                        <th class="text-center">Tombo</th>
-                        <th class="text-center">Categoria</th>
-                        <th class="text-center">Conta Contábil</th>
-                        <th class="text-center">Documento de Origem</th>
-                        <th class="text-center">Estoque</th>
-                        <th class="text-center">Valor</th>
-                        <th class="text-center">Situação</th>
-                        <th class="text-center">Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% if (estoque.length> 0) { %>
-                        <% estoque.forEach(function(item) { %>
-                            <tr> <td class="py-1 text-center"> <%= item.id %> </td>
-                                <td class="py-1 text-center"> <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %> </td>
-                                <td class="py-1"> <%= item.descricao %> </td>
-                                <td class="py-1 text-center"> <%= item.tombo %> </td>
-                                <td class="py-1 text-center"> <%= item.categoria %> </td>
-                                <td class="py-1 text-center"> <%= item.conta_contabil %> </td>
-                                <td class="py-1 text-center"> <%= item.doc_origem %> </td>
-                                <td class="py-1 text-center"> <%= item.estoque %> </td>
-                                <td class="py-1 text-center">R$ <%= Number(item.valor).toFixed(2) %> </td>
-                                <td class="py-1 text-center"> <%= item.situacao %> </td>
-                                <td class="py-1 text-center">
-                                    <a href="/estoque/edit/<%= item.id %>" class="btn btn-secondary btn-sm delete-btn">Vizuaizar</a>
-                                    <a href="/estoque/edit/<%= item.id %>" class="btn btn-warning btn-sm">Editar</a>
-                                    <a href="/estoque/edit/<%= item.id %>" class="btn btn-danger btn-sm">Excluir</a>
-                                </td>
+
+        <div class="border bg-light p-4 shadow-sm rounded">
+            <div class="row align-items-center mb-3">
+                <h2 class="text-center text-success mb-3 mt-3 fw-bold">Estoque Atual</h2>
+            </div>
+            <div class="table-container">
+                <table class="table table-striped table-hover mb-0">
+                    <thead>
+                        <tr>
+                            <th class="text-center">ID</th>
+                            <th class="text-center">Entrada</th>
+                            <th>Descrição</th>
+                            <th class="text-center">Tombo</th>
+                            <th class="text-center">Categoria</th>
+                            <th class="text-center">Conta Contábil</th>
+                            <th class="text-center">Documento de Origem</th>
+                            <th class="text-center">Estoque</th>
+                            <th class="text-center">Valor</th>
+                            <th class="text-center">Situação</th>
+                            <th class="text-center">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% if (estoque.length> 0) { %>
+                            <% estoque.forEach(function(item) { %>
+                                <tr>
+                                    <td class="py-1 text-center">
+                                        <%= item.id %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %>
+                                    </td>
+                                    <td class="py-1">
+                                        <%= item.descricao %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= item.tombo %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= item.categoria %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= item.conta_contabil %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= item.doc_origem %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= item.estoque %>
+                                    </td>
+                                    <td class="py-1 text-center">R$ <%= Number(item.valor).toFixed(2) %>
+                                    </td>
+                                    <td class="py-1 text-center">
+                                        <%= item.situacao %>
+                                    </td>
+                                    <td class="py-1 text-center ">
+                                        <a href="/estoque/visualizar/<%= item.id %>"
+                                            class="btn btn-secondary btn-sm view-btn btn-action">Visualizar</a>
+                                        <a href="/estoque/edit/<%= item.id %>"
+                                            class="btn btn-warning btn-sm btn-action">Editar</a>
+                                        <a href="/estoque/edit/<%= item.id %>"
+                                            class="btn btn-danger btn-sm btn-action">Excluir</a>
+                                    </td>
+                                </tr>
+                            <% }); %>
+                                <% } else { %>
+                                    <tr>
+                                <td colspan="11" class="text-center">Ainda não há itens cadastrados</td>
                             </tr>
-                        <% }); %>
-                    <% } else { %>
-                        <tr> <td colspan="11" class="text-center">Ainda não há itens cadastrados</td> </tr>
-                    <% } %>
-                </tbody>
-            </table>
+                        <% } %>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-    
+
+    <!-- JavaScript para exibição do modal -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const viewButtons = document.querySelectorAll('.view-btn');
+
+            viewButtons.forEach(button => {
+                button.addEventListener('click', async (event) => {
+                    event.preventDefault();
+                    const url = event.target.href;
+                    try {
+                        const response = await fetch(url);
+                        const item = await response.json();
+
+                        if (item) {
+                            const modalHtml = `
+                            <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                                <div class="modal-content">
+                                    <div class="modal-header bg-success text-white">
+                                    <h3 class="modal-title ms-auto" id="infoTomboModalLabel">Informações do Tombo</h3>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                    <div class="card">
+                                        <div class="card-body pb-0">
+                                        <h5 class="card-title">${item.descricao}</h5>
+                                        <p class="card-text">
+                                            <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
+                                            <strong>ID:</strong> ${item.id} <br/>
+                                            <strong>Tombo:</strong> ${item.tombo} <br/>
+                                            <strong>Data de Entrada:</strong> ${new Date(item.data_de_entrada).toLocaleDateString('pt-BR')} <br/>
+                                            <strong>Categoria:</strong> ${item.categoria} <br/>
+                                            <strong>Doc Origem:</strong> ${item.doc_origem} <br/>
+                                            <strong>Estoque:</strong> ${item.estoque} <br/>
+                                            <strong>Valor:</strong> ${parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })} <br/>
+                                            <strong>Situação:</strong> ${item.situacao} <br/>
+                                            <strong>Observação:</strong> ${item.observacao || 'N/A'} <br/>
+                                            <hr>
+                                        </p>
+                                        </div>
+                                    </div>
+                                    </div>
+                                    <div class="modal-footer d-flex justify-content-center">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            `;
+
+
+                            const modalDiv = document.createElement('div');
+                            modalDiv.innerHTML = modalHtml;
+                            document.body.appendChild(modalDiv);
+
+                            const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
+                                backdrop: true,
+                                focus: true
+                            });
+
+                            infoTomboModal.show();
+
+                            infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
+                                modalDiv.remove();
+                            });
+                        }
+                    } catch (error) {
+                        console.error('Erro ao buscar informações do tombo:', error);
+                    }
+                });
+            });
+        });
+
+    </script>
 </body>
 
 </html>
