fix: tentativa 2 de ajustar o painel ao notebook

--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -165,90 +165,91 @@
 
 <body>
     <header>
-        <div class="row">
-            <div class="header-content container-fluid me-auto">
-                <img src="https://sistemas.pm.ce.gov.br/img/PM-SSPDSclara.png" alt="Polícia Militar Logo" class="logo">
-            </div>
+      <div class="row">
+        <div class="header-content container-fluid me-auto">
+          <img src="https://sistemas.pm.ce.gov.br/img/PM-SSPDSclara.png" alt="Polícia Militar Logo" class="logo">
         </div>
-
-        <div class="container-white container">
-            <h3>Painel de Controle</h3>
-        </div>
+      </div>
+  
+      <div class="container-white container">
+        <h3>Painel de Controle</h3>
+      </div>
     </header>
-
+  
     <main class="container bg-light border">
-        <div class="systems-grid">
-            <a href="/entrada" class="system-box link">
-                <div>
-                    <i class="fas fa-sign-in-alt text-success fa-2x"></i>
-                    <h4 class="text-success">Formulário de Entrada</h4>
-                    <p class="text-success">Formulário de Entrada</p>
-                </div>
-            </a>
-            <a href="/saida" class="system-box link">
-                <div>
-                    <i class="fas fa-sign-out-alt text-success fa-2x"></i>
-                    <h4 class="text-success">Formulário de Saída</h4>
-                    <p class="text-success">Formulário de Saída</p>
-                </div>
-            </a>
-            <a href="/tabela/estoqueatual" class="system-box link">
-                <div>
-                    <i class="fas fa-box-open text-success fa-2x"></i>
-                    <h4 class="text-success">Tabela do Estoque Atual</h4>
-                    <p class="text-success">Estoque Atual</p>
-                </div>
-            </a>
-            <a href="/qtde-unica" class="system-box link">
-                <div>
-                    <i class="fas fa-list-ol text-success fa-2x"></i>
-                    <h4 class="text-success">Quantidade De itens</h4>
-                    <p class="text-success">Descrição e quantidade de itens disponíveis</p>
-                </div>
-            </a>
-            <a href="/estoque/itenspagos" class="system-box link">
-                <div>
-                    <i class="fas fa-boxes text-success fa-2x"></i>
-                    <h4 class="text-success">Itens que Sairam do estoque</h4>
-                    <p class="text-success">Itens Pagos</p>
-                </div>
-            </a>
-            <a href="/relatorios" class="system-box link">
-                <div>
-                    <i class="fas fa-chart-line text-success fa-2x"></i>
-                    <h4 class="text-success">Relatório de quantidade</h4>
-                    <p class="text-success">Relatórios</p>
-                </div>
-            </a>
-            <a href="/pesquisa-avancada-page" class="system-box link">
-                <div>
-                    <i class="fas fa-search text-success fa-2x"></i>
-                    <h4 class="text-success">Pesquisas</h4>
-                    <p class="text-success">Pesquisa Avançada</p>
-                </div>
-            </a>
-            <a href="/historico-movimentacao-page" class="system-box link">
-                <div>
-                    <i class="fas fa-history text-success fa-2x"></i>
-                    <h4 class="text-success">Histórico Geral</h4>
-                    <p class="text-success">Histórico de Entradas / Saídas</p>
-                </div>
-            </a>
-        </div>
+      <div class="systems-grid">
+        <a href="/entrada" class="system-box link">
+          <div>
+            <i class="fas fa-sign-in-alt text-success fa-2x"></i>
+            <h4 class="text-success">Formulário de Entrada</h4>
+            <p class="text-success">Formulário de Entrada</p>
+          </div>
+        </a>
+        <a href="/saida" class="system-box link">
+          <div>
+            <i class="fas fa-sign-out-alt text-success fa-2x"></i>
+            <h4 class="text-success">Formulário de Saída</h4>
+            <p class="text-success">Formulário de Saída</p>
+          </div>
+        </a>
+        <a href="/tabela/estoqueatual" class="system-box link">
+          <div>
+            <i class="fas fa-box-open text-success fa-2x"></i>
+            <h4 class="text-success">Tabela do Estoque Atual</h4>
+            <p class="text-success">Estoque Atual</p>
+          </div>
+        </a>
+        <a href="/qtde-unica" class="system-box link">
+          <div>
+            <i class="fas fa-list-ol text-success fa-2x"></i>
+            <h4 class="text-success">Quantidade De itens</h4>
+            <p class="text-success">Descrição e quantidade de itens disponíveis</p>
+          </div>
+        </a>
+        <a href="/estoque/itenspagos" class="system-box link">
+          <div>
+            <i class="fas fa-boxes text-success fa-2x"></i>
+            <h4 class="text-success">Itens que Sairam do estoque</h4>
+            <p class="text-success">Itens Pagos</p>
+          </div>
+        </a>
+        <a href="/relatorios" class="system-box link">
+          <div>
+            <i class="fas fa-chart-line text-success fa-2x"></i>
+            <h4 class="text-success">Relatório de quantidade</h4>
+            <p class="text-success">Relatórios</p>
+          </div>
+        </a>
+        <a href="/pesquisa-avancada-page" class="system-box link">
+          <div>
+            <i class="fas fa-search text-success fa-2x"></i>
+            <h4 class="text-success">Pesquisas</h4>
+            <p class="text-success">Pesquisa Avançada</p>
+          </div>
+        </a>
+        <a href="/historico-movimentacao-page" class="system-box link">
+          <div>
+            <i class="fas fa-history text-success fa-2x"></i>
+            <h4 class="text-success">Histórico Geral</h4>
+            <p class="text-success">Histórico de Entradas / Saídas</p>
+          </div>
+        </a>
+      </div>
     </main>
-
+    
     <footer>
-        <div class="footer-content">
-            <h4>COLOG - Comando Logístico da PMCE</h4>
-            <h5 class="mb-0 fw-bold">CEGPA / NUCPA</h5>
-            <div class="hr-div d-flex justify-content-center">
-                <hr class="w-25 m-1">
-            </div>
-            <p class="m-0">R. Carlos Araújo, S/N - Olavo Oliveira</p>
-            <p class="">Fone: 85 3101.3570 / 3101.3571 - E-mail: informatica@policiamilitar.ce.gov.br <br>
-                Horário de funcionamento: <br>De segunda a sexta de 8h às 12h e de 13h às 16:30hs</p>
+      <div class="footer-content">
+        <h4>COLOG - Comando Logistico da PMCE</h4>
+        <h5 class="mb-0 fw-bold">CEGPA / NUCPA</h5>
+        <div class="hr-div d-flex justify-content-center">
+          <hr class="w-25 m-1">
         </div>
+        <p class="m-0">R. Carlos Araújo, S/N - Olavo Oliveira</p>
+        <p>Fone: 85 3101.3570 / 3101.3571 - E-mail: informatica@policiamilitar.ce.gov.br <br>
+           Horário de funcionamento: <br>De segunda a sexta de 8h às 12h e de 13h às 16:30hs</p>
+      </div>
     </footer>
-</body>
+  </body>
+  
 
 </html>
